feat:排除Mysql以外的数据库插件，自定义精卫插件